<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QtQQ_ServerClass</class>
 <widget class="QDialog" name="QtQQ_ServerClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>999</width>
    <height>502</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>999</width>
    <height>502</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>999</width>
    <height>502</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>QtQQ_Server</string>
  </property>
  <widget class="QScrollArea" name="scrollArea">
   <property name="geometry">
    <rect>
     <x>1</x>
     <y>1</y>
     <width>700</width>
     <height>500</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>700</width>
     <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
     <height>500</height>
    </size>
   </property>
   <property name="widgetResizable">
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="scrollAreaWidgetContents">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>698</width>
      <height>498</height>
     </rect>
    </property>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>700</width>
       <height>500</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </widget>
  </widget>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>702</x>
     <y>1</y>
     <width>296</width>
     <height>500</height>
    </rect>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>296</width>
      <height>201</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>Server_Logo.jpg</pixmap>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>210</y>
      <width>291</width>
      <height>291</height>
     </rect>
    </property>
    <property name="title">
     <string/>
    </property>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>170</y>
       <width>291</width>
       <height>3</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>10</y>
       <width>72</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>员工部门:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>50</y>
       <width>72</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>员工姓名:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>100</y>
       <width>72</width>
       <height>15</height>
      </rect>
     </property>
     <property name="text">
      <string>员工寸照:</string>
     </property>
    </widget>
    <widget class="QComboBox" name="employeeDepBox">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>10</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <item>
      <property name="text">
       <string>人事部</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>研发部</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>市场部</string>
      </property>
     </item>
    </widget>
    <widget class="QLineEdit" name="nameLineEdit">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>50</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="placeholderText">
      <string>请输入员工姓名</string>
     </property>
    </widget>
    <widget class="QPushButton" name="selectPictureBtn">
     <property name="geometry">
      <rect>
       <x>210</x>
       <y>130</y>
       <width>41</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>...</string>
     </property>
    </widget>
    <widget class="QPushButton" name="addBtn">
     <property name="geometry">
      <rect>
       <x>230</x>
       <y>0</y>
       <width>51</width>
       <height>91</height>
      </rect>
     </property>
     <property name="text">
      <string>添加</string>
     </property>
    </widget>
    <widget class="QLabel" name="headLabel">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>90</y>
       <width>101</width>
       <height>71</height>
      </rect>
     </property>
     <property name="text">
      <string>  员工寸照</string>
     </property>
    </widget>
    <widget class="QComboBox" name="departmentBox">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>180</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <item>
      <property name="text">
       <string>公司群</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>人事部</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>研发部</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>市场部</string>
      </property>
     </item>
    </widget>
    <widget class="QPushButton" name="queryDepBtn">
     <property name="geometry">
      <rect>
       <x>170</x>
       <y>180</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>查询员工</string>
     </property>
    </widget>
    <widget class="QPushButton" name="queryIDBtn">
     <property name="geometry">
      <rect>
       <x>170</x>
       <y>220</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>查询员工</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="queryIDLineEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>220</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="placeholderText">
      <string>请输入员工ID号</string>
     </property>
    </widget>
    <widget class="QPushButton" name="logoutBtn">
     <property name="geometry">
      <rect>
       <x>170</x>
       <y>260</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>注销员工</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="logoutIDLineEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>260</y>
       <width>113</width>
       <height>28</height>
      </rect>
     </property>
     <property name="placeholderText">
      <string>请输入员工ID号</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="QtQQ_Server.qrc"/>
 </resources>
 <connections/>
</ui>
